--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 {% include header.html %}
 
 <div class="portfolio">
-    <h1>Web Design:</h1>
+    <h1>Когда-нибудь здесь будут ссылки на что-нибудь интересненькое...</h1>
     <ul>
         {% for websites in site.data.websites %}
         <li>
@@ -17,7 +17,7 @@ layout: default
 
 
 <div class="blog">
-    <h1>Blog Posts:</h1>
+    <h1>Записи в блоге</h1>
     <ul>
         {% for post in site.posts %}
         <li>
