--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
 
 
 <div class="blog">
-    <h1>Записи в блоге</h1>
+    <h1>Записи в блоге (пока не мои)</h1>
     <ul>
         {% for post in site.posts %}
         <li>
