add prague album

--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@ layout: default
 
 {% include header.html %}
 
-<!--
+
 <div class="portfolio">
 
-        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/dmitry_kolesnikov/24555051789/in/dateposted-public/" title="4"><img src="https://c1.staticflickr.com/2/1452/24555051789_373818a4b3_z.jpg" width="640" height="427" alt="4"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
-
+  <a data-flickr-embed="true"  href="https://www.flickr.com/photos/dmitry_kolesnikov/albums/72157711012855298" title="Prague, 2019"><img src="https://live.staticflickr.com/65535/48774268711_738b60c338_z.jpg" width="640" height="424" alt="Prague, 2019"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
         <br>
     <br>
 </div>
--->
+
 
 <!--
 <div class="friends">
