remove about section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@ layout: default
 
 {% include header.html %}
 
+<ul>
+<li><a href="https://www.flickr.com/photos/dmitry_kolesnikov/">Flickr</a></li>
+<li><a href="https://www.facebook.com/dmitriy.kolesnikov.1/">Facebook</a></li>
+<li><a href="https://vk.com/id9383842">Вконтакте</a></li>
+<li><a href="https://www.instagram.com/wunwud/">Instagram</a></li>
+<li><a href="https://twitter.com/Ka_Dmitry">Twitter</a></li>
+<li><a href="/wedding">♥</a></li>
+</ul>
+
 <!--
 <div class="portfolio">
 
