teletype blog added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 <li><a href="https://vk.com/id9383842">Вконтакте</a></li>
 <li><a href="https://www.instagram.com/wunwud/">Instagram</a></li>
 <li><a href="https://twitter.com/Ka_Dmitry">Twitter</a></li>
-<li><a href="https://blog.dmitryklesnikov.com">Teletype Blog</a></li>
+<li><a href="https://blog.dmitrykolesnikov.com">Teletype Blog</a></li>
 <li><a href="https://dmitrykolesnikov.smugmug.com/">♥</a></li>
 </ul>
 
