links to GitHub added

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@ layout: default
 
 {% include header.html %}
 
+
 <ul>
-<li><a href="https://www.flickr.com/photos/dmitry_kolesnikov/">Flickr</a></li>
+  <li>Scientific Papers → <a href="https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=AND&filter_author_facet_hier_fq_author=author_facet_hier%3A%220%2FKolesnikov%2C%20D%22&filter_database_fq_database=AND&filter_database_fq_database=database%3A%22astronomy%22&fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%220%2FKolesnikov%2C%20D%22)&fq_database=(database%3A%22astronomy%22)&q=%20author%3A%22kolesnikov%22%20year%3A2015-2021&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS List</a></li>
+  <li>X-ray binaries modelling → <a href="https://github.com/eliseys/discostar">GitHub</a></li>
+  <li>Software for Solar Eclipse photography → <a href="https://github.com/eliseys/EclipseProject">GitHub</a></li>
+<li>Photography → <a href="https://www.flickr.com/photos/dmitry_kolesnikov/">Flickr</a></li>
 <li><a href="https://www.facebook.com/dmitriy.kolesnikov.1/">Facebook</a></li>
-<li><a href="https://vk.com/id9383842">Вконтакте</a></li>
+<!-- <li><a href="https://vk.com/id9383842">Вконтакте</a></li> -->
 <li><a href="https://www.instagram.com/wunwud/">Instagram</a></li>
-<li><a href="https://twitter.com/Ka_Dmitry">Twitter</a></li>
+<!-- <li><a href="https://twitter.com/Ka_Dmitry">Twitter</a></li> -->
 <!-- <li><a href="https://blog.dmitrykolesnikov.com">Teletype Blog</a></li> -->
 <li><a href="https://dmitrykolesnikov.smugmug.com/">♥</a></li>
 </ul>
